61 persen akurasi, need experiment